; ModuleID = '/home/carl/AnghaBench/git/extr_merge-recursive.c_show.c'
source_filename = "/home/carl/AnghaBench/git/extr_merge-recursive.c_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.merge_options = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.merge_options*, i32)* @show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @show(%struct.merge_options* %0, i32 %1) #0 {
  %3 = alloca %struct.merge_options*, align 8
  %4 = alloca i32, align 4
  store %struct.merge_options* %0, %struct.merge_options** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.merge_options*, %struct.merge_options** %3, align 8
  %6 = getelementptr inbounds %struct.merge_options, %struct.merge_options* %5, i32 0, i32 1
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %17, label %11

11:                                               ; preds = %2
  %12 = load %struct.merge_options*, %struct.merge_options** %3, align 8
  %13 = getelementptr inbounds %struct.merge_options, %struct.merge_options* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = load i32, i32* %4, align 4
  %16 = icmp sge i32 %14, %15
  br i1 %16, label %22, label %17

17:                                               ; preds = %11, %2
  %18 = load %struct.merge_options*, %struct.merge_options** %3, align 8
  %19 = getelementptr inbounds %struct.merge_options, %struct.merge_options* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = icmp sge i32 %20, 5
  br label %22

22:                                               ; preds = %17, %11
  %23 = phi i1 [ true, %11 ], [ %21, %17 ]
  %24 = zext i1 %23 to i32
  ret i32 %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
